# 50rnot

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  model_input.py  models.py  pyproject.toml  requirements.txt  server.py  train_model.py  use_model.py
backend/artifacts/: model.keras  preprocessor.joblib
frontend/: .eslintrc.cjs  .prettierignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Providers.tsx
frontend/src/components/AutoCompleteSelect/: AutoCompleteSelect.tsx  index.ts
frontend/src/components/Form/: Form.tsx  PredictionText.tsx
frontend/src/components/FormInput/: FormInput.tsx
frontend/src/components/InputErrorMessage/: InputErrorMessage.tsx  index.ts
frontend/src/components/NavBar/: NavBar.tsx  ThemeSwitch.tsx
frontend/src/data/: selectInputs.json
frontend/src/entities/: Prediction.ts  prediction.ts
frontend/src/hooks/: useMakePrediction.ts  useSendFormData.ts
frontend/src/schemas/: formSchema.ts  predictionSchema.ts
frontend/src/services/: httpService.ts
