[tool.poetry]
name = "adult-proj-test"
version = "0.1.0"
description = ""
authors = ["Paw565pl <paw565pl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
tensorflow = "^2.16.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
